test/visibility/errors/issue-21289-2b.future
bug: Bad type stringification includes 'module='
